# rustbucket

./: .gitignore  Cargo.toml  README.md  plot_data.py  scan_golf_mk4.sh  scan_golf_mk4_sample.out
.cargo/: config
kicad/: beaglebone_obd.kicad_pcb  beaglebone_obd.net  beaglebone_obd.pro  beaglebone_obd.sch  ferris.kicad_mod  fp-lib-table
src/: can.rs  dtc.rs  error.rs  kline.rs  kwp1281.rs  kwp2000.rs  lib.rs  main.rs  misc.rs  obd2.rs
